--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-socket.io-session": "^1.3.5",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5"
