--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-socket.io-session": "^1.3.5",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "socket.io": "^4.7.5"
   }
 }
