--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-socket.io-session": "^1.3.5",
+    "link-preview-generator": "^1.1.0",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
